k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-app
  namespace: weather-app
spec:
  selector:
    app: weather-app
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
  type: NodePort
